fix footer spacing

--- a/client/src/components/footer.css
+++ b/client/src/components/footer.css
@@ -11,7 +11,6 @@
 .Footer-wrapper{
     margin: 4em;
     margin-top: 8em;
-    position: absolute;
 
 }
 
